# snake_maker

./: .gitignore  CMakeLists.txt  README.md
maps/: donkey_kong.snake
shaders/: quad.frag  quad.vert
share/: settings
share/maps/: blocks.snake  blocks_arrow.snake  blocks_waffle.snake  donkey_kong.snake  normal.snake  pacman.snake  test.snake
share/resources/: check.tile  cross.tile
share/skins/: arrow.skin  blocks.skin  pacman.skin
share/tiles/: apple.tile  arrow_apple.tile  arrow_head_down.tile  arrow_head_left.tile  arrow_head_right.tile  arrow_head_up.tile  arrow_horizontal.tile  arrow_left_down.tile  arrow_left_up.tile  arrow_right_down.tile  arrow_right_up.tile  arrow_vertical.tile  bad.tile  blocks_apple.tile  blocks_empty.tile  blocks_fill.tile  blocks_solid.tile  church.tile  green.tile  hazard.tile  new.tile  pacman_apple.tile  pacman_skin.tile  pacman_wall_left.tile  pacman_wall_right.tile  red.tile  skin_arrow_head_down.tile  skin_arrow_head_left.tile  skin_arrow_head_right.tile  skin_arrow_head_up.tile  skin_arrow_hor.tile  skin_arrow_left_down.tile  skin_arrow_left_up.tile  skin_arrow_right_down.tile  skin_arrow_right_up.tile  skin_arrow_tail_down.tile  skin_arrow_tail_left.tile  skin_arrow_tail_right.tile  skin_arrow_tail_up.tile  skin_arrow_vert.tile
src/: button.cpp  button.hpp  collisions.cpp  collisions.hpp  common.hpp  context.hpp  custom_fonts.cpp  custom_fonts.hpp  drawing.cpp  drawing.hpp  game_state.hpp  increment_value.cpp  increment_value.hpp  main.cpp  map.cpp  map.hpp  map_create.cpp  map_create.hpp  math_types.hpp  menu.cpp  menu.hpp  pixel.hpp  pixel_map.cpp  pixel_map.hpp  quad.cpp  quad.hpp  settings.cpp  settings.hpp  shader.cpp  shader.hpp  slider.cpp  slider.hpp  snake.cpp  snake.hpp  text_box.cpp  text_box.hpp  tile_create.cpp  tile_create.hpp  utils.cpp  utils.hpp
tiles/: empty.tile  solid.tile
